fixed bug with about section not displaying properly on mobile, made projects grayscale until hovered on desktops.

--- a/src/pages/scss/about.module.scss
+++ b/src/pages/scss/about.module.scss
@@ -54,6 +54,12 @@
   .split {
     flex-direction: column;
   }
+  .leftContainer {
+    width: 100%;
+  }
+  .rightContainer { 
+    width: 100%;
+  }
   .paragraphLeft {
     width: 100%;
     padding-top: 0;
