--- a/src/pages/scss/projects.module.scss
+++ b/src/pages/scss/projects.module.scss
@@ -64,7 +64,7 @@
 
 .hoverImage {
   //border: none;
-  opacity: 0.6;
+  //opacity: 0.6;
   max-width: 1000px;
   display: block;
   margin: 0;
@@ -72,6 +72,7 @@
   max-height: 500px;
   object-fit: cover;
   transition: .33s ease;
+  //filter: none;
 }
 
 .imgContainer {
@@ -84,7 +85,7 @@
 }
 
 .imgContainer:hover .hoverImage {
-  opacity: 1;
+  //opacity: 1;
   transform: scale(1.05);
 }
 
@@ -123,7 +124,12 @@
       height: 250px;
       max-height: 300px;
       opacity: 1;
+      filter: grayscale(100%);
     }
+  }
+
+  .hoverImage:hover {
+    filter: none;
   }
 
   .clickIcon {
@@ -146,6 +152,15 @@
 {
   .projects {
     height: 100%;
+  }
+
+  .imgContainer {
+    width: 85%;
+    margin: 0 auto;
+  }
+
+  .imagesList .hoverImage {
+    filter: none;
   }
 
   .imagesList {
